--- a/module-admin/src/main/resources/templates/resources/view.html
+++ b/module-admin/src/main/resources/templates/resources/view.html
@@ -229,7 +229,7 @@
                         "MENU": {
                             "icon": "icofont icofont-file-alt"
                         },
-                        "DETAIL_MENU": {
+                        "MENU_DETAIL": {
                             "icon": "icofont icofont-copy-black"
                         },
                         "FUNCTION": {
