--- a/module-admin/src/main/resources/templates/roles/memberMapping.html
+++ b/module-admin/src/main/resources/templates/roles/memberMapping.html
@@ -93,7 +93,7 @@
 
                 ajax: {
                     async: false,
-                    url: `/admin/roles/${roleId}/members/`,
+                    url: `/admin/roles/${roleId}/members`,
                     method: 'get',
                     "dataSrc": function (res) {
                         return res.data;
