--- a/module-admin/src/main/resources/templates/roles/resourceMapping.html
+++ b/module-admin/src/main/resources/templates/roles/resourceMapping.html
@@ -157,7 +157,7 @@
                     "MENU": {
                         "icon": "icofont icofont-file-alt"
                     },
-                    "DETAIL_MENU": {
+                    "MENU_DETAIL": {
                         "icon": "icofont icofont-copy-black"
                     },
                     "FUNCTION": {
