--- a/module-admin/src/main/resources/templates/popupManage/view.html
+++ b/module-admin/src/main/resources/templates/popupManage/view.html
@@ -243,7 +243,7 @@
                         <div class="banner" id="banner${item.id}" draggable="false" data-id="${item.id}" data-isEnabled="${item.isEnabled}">
                             ${handleTag}
                             <div class="col-6 col-lg-3 banner-thumbnail">
-                                <img class="img-fluid" src="/files/assets/images/logo2.png" alt="banner image">
+                                <img class="img-fluid" src="/images/${item.savedName}" alt="popup image">
                             </div>
                             <div class="col-12 col-lg-6 m-l-20 banner-title">
                                     ${statusTag}
