chore : 관리자 title 변경 / 새실일기 -> 새식일기 관리자

--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -2,7 +2,7 @@
 <th:block th:fragment="head">
     <head>
         <meta charset="UTF-8">
-        <title>새식일기</title>
+        <title>새식일기 관리자</title>
         <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 10]>
