--- a/module-admin/src/main/resources/templates/roles/resourceMapping.html
+++ b/module-admin/src/main/resources/templates/roles/resourceMapping.html
@@ -10,9 +10,9 @@
     </div>
     <div class="col-12 col-xl-6">
         <div class="card">
-            <div class="card-header p-b-0">
+            <div class="card-header card-header-flex p-b-0">
                 <h4 class="sub-title"><strong>자원구조</strong></h4>
-                <div class="col-12 col-md-6 text-right">
+                <div class="text-right">
                     <button type="button" id='resourceMappingSaveBtn' class="btn btn-primary">저장</button>
                 </div>
             </div>
