--- a/module-admin/src/main/resources/templates/roles/roleView.html
+++ b/module-admin/src/main/resources/templates/roles/roleView.html
@@ -2,7 +2,7 @@
     <div class="col-12 col-xl-6">
 
         <div class="card">
-            <div class="card-header p-b-0">
+            <div class="card-header card-header-flex p-b-0">
                 <h4 class="sub-title"><strong>역할구조</strong></h4>
                 <div class="text-right">
                     <button type="button" id='rootRoleInsertBtn' class="btn btn-transparent">루트 역할 등록</button>
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="mb-0 mt-4 form-group row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 text-right">
                             <button type="button" class="btn btn-primary" id="saveBtn">
                                 저장
                             </button>
