feat : 일기관리 제작

--- a/module-admin/src/main/resources/templates/diaryManage/infoForm.html
+++ b/module-admin/src/main/resources/templates/diaryManage/infoForm.html
@@ -39,7 +39,7 @@
                 <div class="row form-group required mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="diaryCategory"><strong>카테고리</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" th:field="*{diaryCategory}"
+                        <input type="text" th:value="${diary.diaryCategory.value}"
                                class="form-control form-control-sm form-control-round"
                                readonly>
                     </div>
