--- a/module-admin/src/main/resources/templates/diaryManage/view.html
+++ b/module-admin/src/main/resources/templates/diaryManage/view.html
@@ -41,9 +41,9 @@
                                             <strong>카테고리</strong>
                                         </div>
                                         <div class="col-12">
-                                            <select name="searchStatus" id="searchStatus" class="form-select form-control form-control-round custom-select">
+                                            <select name="searchCategory" id="searchCategory" class="form-select form-control form-control-round custom-select">
                                                 <option value="">- 전체 -</option>
-                                                <option th:each="diaryStatus : ${diaryStatus}" th:value="${diaryStatus.key}" th:text="${diaryStatus.value}">value</option>
+                                                <option th:each="diaryCategory : ${diaryCategories}" th:value="${diaryCategory.key}" th:text="${diaryCategory.value}">value</option>
                                             </select>
                                         </div>
                                     </div>
@@ -64,11 +64,9 @@
                                             <strong>상태</strong>
                                         </div>
                                         <div class="col-12">
-                                            <select name="searchAnimalDivision1Category" id="searchAnimalDivision1Category" class="form-select form-control form-control-round custom-select">
+                                            <select name="searchStatus" id="searchStatus" class="form-select form-control form-control-round custom-select">
                                                 <option value="">- 전체 -</option>
-                                                <option th:each="dto : ${animal_division1}"
-                                                        th:value="${dto.animalDivision1Id}"
-                                                        th:text="${dto.animalDivision1Category}">
+                                                <option th:each="diaryStatus : ${diaryStates}" th:value="${diaryStatus.key}" th:text="${diaryStatus.value}">value</option>
                                             </select>
                                         </div>
                                     </div>
@@ -77,7 +75,7 @@
                             <!-- //키워드 filter -->
                             <!-- 키워드 filter-btn -->
                             <div class="mt-1 p-t-20 text-center">
-                                <button type="reset" class="btn btn-gray m-r-5">초기화</button>
+                                <button type="reset" class="btn btn-gray m-r-5" id="searchInit">초기화</button>
                                 <button type="button" class="btn btn-primary" id="searchBtn">검색</button>
                             </div>
                         </form>
@@ -212,13 +210,15 @@
                                             </div>`;
                             }
                         },
-                        {render: function (data,type,row){
+                        {data: 'id'},
+                        {width:120,
+                            render: function (data,type,row){
                                 return `${row.diaryCategory.value}`;
                             }},
                         {data :'title'},
-                        {data:'title'},
                         {data:'createdByName'},
-                        {render: function (data,type,row){
+                        {width:120,
+                            render: function (data,type,row){
                                 return `${row.diaryStatus.value}`;
                             }},
                         {data:'commentCnt'},
@@ -272,13 +272,13 @@
             },
             delete: function () {
                 if (this.selectedRow.length === 0) {
-                    alert('선택할 항목을 선택해 주십시오.');
+                    alert('삭제할 항목을 선택해 주십시오.');
                 } else {
                     if (confirm('삭제하시겠습니까?')) {
                         $.ajax({
                             type: 'delete',
                             data: {deleteIds: diaryController.selectedRow.join(",")},
-                            url: '/admin/diaryManage/deleteDiary.do'
+                            url: '/admin/diaryManage/deleteDiaryById.do'
                         }).done(function () {
                             alert('삭제 되었습니다.');
                             diaryController.init();
@@ -300,7 +300,7 @@
 
             initTab : function () {
                 this.currentTab = "";
-                this.reportUrl ='/admin/diaryManage/commentForm.html?id='+this.diaryId;
+                this.commentUrl ='/admin/diaryManage/commentForm.html?id='+this.diaryId;
                 this.infoUrl ='/admin/diaryManage/infoForm.html?id='+this.diaryId;
                 this.moveTab("info")
             },
@@ -312,12 +312,10 @@
                 $(".nav-link").removeClass("active");
                 tabController.currentTab = tabid;
 
-                if(tabid=="chatting"){
-                    tabController.loadForm(tabController.chattingUrl);
+                if(tabid=="comment"){
+                    tabController.loadForm(tabController.commentUrl);
                 }else if (tabid=="info"){
                     tabController.loadForm(tabController.infoUrl);
-                }else{
-                    tabController.loadForm(tabController.reportUrl);
                 }
                 $("#"+tabController.currentTab+'Tab').addClass("active");
                 let offset = $("#contentPanel").offset(); //해당 위치 반환
@@ -393,6 +391,112 @@
             }
         }
 
+        const diaryCommentController = {
+            id : null
+            ,init : function (){
+                let _this = this;
+                _this.getCommentList();
+            }
+
+            ,getCommentList : function () {
+                let _this = this;
+                $.ajax({
+                    type: 'GET',
+                    data: {id : _this.id},
+                    url: `/admin/diaryManage/getCommentListById.do`
+                }).done(function (response) {
+                    if (response.length > 0){
+                        $(response).each(function () {
+                            if (this.depth == 1){
+                                let el = ''
+                                el += '<div class="banner reply" id="banner'+this.id+'" data-id="'+this.id+'">'
+                                el += '<div class="col-10 m-l-20 banner-title">'
+                                el += '<div class="col m-b-10">'
+                                el += '<span>'+this.createdByName+'</span>'
+                                el += '<span>작성일시 '+this.createdAt+' / 좋아요 : '+this.likeCnt+'개 / 답글 : '+this.replyCnt+'개</span>'
+                                el += '</div>'
+                                el += '<div class="col stit m-l-20">'
+                                el += '<span>'+this.content+'</span>'
+                                el += '</div>'
+                                el += '</div>'
+                                el += '<div class="col-2 banner-btn-area" style="float: right">'
+                                el += '<div class="row banner-btn">'
+                                el += '<button class="btn btn-primary mb-2 showBtn" onClick="diaryCommentController.showReply('+this.id+')">답글보기</button>'
+                                el += '<button class="btn btn-gray mb-2" onClick="diaryCommentController.deleteComment('+this.id+')">삭제</button>'
+                                el += '</div>'
+                                el += '</div>'
+                                el += '</div>'
+                                $('#commentCon').append(el)
+                            }else{
+                                let el = ''
+                                el += '<div class="banner m-l-30" id="banner'+this.id+'" data-upper-id="'+this.upperId+'" data-id="'+this.id+'" style="display:none;">'
+                                el += '<div class="col-10 m-l-20 banner-title">'
+                                el += '<div class="col m-b-10">'
+                                el += '<span>'+this.createdByName+'</span>'
+                                el += '<span>작성일시 '+this.createdAt+' / 좋아요 : '+this.likeCnt+'개</span>'
+                                el += '</div>'
+                                el += '<div class="col stit m-l-20">'
+                                el += '<span>'+this.content+'</span>'
+                                el += '</div>'
+                                el += '</div>'
+                                el += '<div class="col-2 banner-btn-area" style="float: right">'
+                                el += '<div class="row banner-btn">'
+                                el += '<button class="btn btn-gray mb-2" onClick="diaryCommentController.deleteReply('+this.id+')">답글삭제</button>'
+                                el += '</div>'
+                                el += '</div>'
+                                el += '</div>'
+                                $('#commentCon').find('[data-id='+this.upperId+']').after(el)
+                            }
+                        })
+                    }
+                }).fail(function (error) {
+                    alert('리스트 조회중 에러가 발생하였습니다.');
+                    console.log(JSON.stringify(error));
+                })
+            }
+
+            ,showReply : function (id) {
+                if ($(document).find('[data-upper-id='+id+']:visible').length > 0){
+                    $(document).find('[data-upper-id='+id+']').hide()
+                    $(document).find('[data-id='+id+']').find('.showBtn').text('답글보기')
+                }else{
+                    $(document).find('[data-upper-id='+id+']').show()
+                    $(document).find('[data-id='+id+']').find('.showBtn').text('답글숨기기')
+                }
+
+            }
+
+            ,deleteComment : function (id) {
+                if (confirm("댓글에 포함된 답글까지 모두 삭제하시겠습니까?")){
+                    $.ajax({
+                        type: 'delete',
+                        data: {id : id},
+                        url: `/admin/diaryManage/deleteCommentById.do`
+                    }).done(function (response) {
+                        alert("삭제처리가 완료되었습니다.")
+                    }).fail(function (error) {
+                        alert('삭제처리 중 에러가 발생하였습니다.');
+                        console.log(JSON.stringify(error));
+                    })
+                }
+            }
+
+            ,deleteReply : function (id) {
+                if (confirm("댓글을 삭제하시겠습니까?")){
+                    $.ajax({
+                        type: 'delete',
+                        data: {id : id},
+                        url: `/admin/diaryManage/deleteCommentById.do`
+                    }).done(function (response) {
+                        alert("삭제처리가 완료되었습니다.")
+                    }).fail(function (error) {
+                        alert('삭제처리 중 에러가 발생하였습니다.');
+                        console.log(JSON.stringify(error));
+                    })
+                }
+            }
+        }
+
 
         $(function () {
             diaryController.init();
@@ -400,20 +504,23 @@
                 diaryController.delete();
             }).on('click', '#searchBtn', function () {
                 diaryController.init();
-            })
+            }).on('click', '#searchInit', function () {
+                $('#searchKeyword, #searchType, #searchTitle, #searchStatus, #searchCategory').val('');
+                $('select').niceSelect('update');
+            });
             $('input[name=tableCheckbox]').on('change', function () {
                 const $this = $(this)
                 if ($this.is(':checked')) {
-                    adoptController.selectedRow.push($this.data('id'));
-                    if (adoptController.selectedRow.length === $('input[name=tableCheckbox]').length) {
+                    diaryController.selectedRow.push($this.data('id'));
+                    if (diaryController.selectedRow.length === $('input[name=tableCheckbox]').length) {
                         $('#allCheckBox').prop('checked', true);
                     }
                 } else {
-                    adoptController.selectedRow = $.grep(adoptController.selectedRow, function (i) {
+                    diaryController.selectedRow = $.grep(diaryController.selectedRow, function (i) {
                         return i != $this.data('id');
                     })
 
-                    if (adoptController.selectedRow.length === 0) $('#allCheckBox').prop('checked', false);
+                    if (diaryController.selectedRow.length === 0) $('#allCheckBox').prop('checked', false);
                 }
             })
 
@@ -426,12 +533,12 @@
                         this.checked = true;
                         allSelectedRow.push($(this).data('id'));
                     })
-                    adoptController.selectedRow = allSelectedRow;
+                    diaryController.selectedRow = allSelectedRow;
                 } else {
                     $('input[name=tableCheckbox]').each(function () {
                         this.checked = false;
                     })
-                    adoptController.selectedRow = [];
+                    diaryController.selectedRow = [];
                 }
             });
         })
