--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -105,7 +105,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a href="javascript:void(0)">
+                    <a href="/admin/diaryManage/view">
                         <span class="pcoded-micon"><i class="feather icon-home"></i></span>
                         <span class="pcoded-mtext">일기관리</span>
                     </a>
