--- a/module-admin/src/main/resources/templates/error/500.html
+++ b/module-admin/src/main/resources/templates/error/500.html
@@ -1,12 +1,12 @@
 <html lang="en-us" class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>404 페이지 </title>
+    <title>500 페이지 </title>
     <meta name="description" content="Flat able 404 Error page design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Codedthemes">
 
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="/files/assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/files/extra-pages/404/1/css/style.css"/>
 </head>
 
