--- a/module-admin/src/main/resources/templates/common/login.html
+++ b/module-admin/src/main/resources/templates/common/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
-    <link rel="icon" th:href="@{/files/assets/images/favicon.ico}" type="image/x-icon">
+    <link rel="icon" th:href="@{/files/assets/images/fafvicon1.png}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
     <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/bootstrap/dist/css/bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/files/assets/icon/themify-icons/themify-icons.css}">
