--- a/module-admin/src/main/resources/templates/error/404.html
+++ b/module-admin/src/main/resources/templates/error/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Codedthemes">
 
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="/files/assets/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/files/extra-pages/404/1/css/style.css"/>
 </head>
 
