--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -2,7 +2,7 @@
 <th:block th:fragment="head">
     <head>
         <meta charset="UTF-8">
-        <title>페이지 타이틀</title>
+        <title>새식일기 관리자 페이지</title>
         <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 10]>
@@ -11,8 +11,6 @@
         <![endif]-->
         <!-- Meta -->
         <meta charset="utf-8">\
-        <meta name="_csrf" th:content="${_csrf.token}">
-        <meta name="_csrf_header" th:content="${_csrf.headerName}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="description" content="#">
