design: 403 페이지 수정

--- a/module-admin/src/main/resources/templates/error/403.html
+++ b/module-admin/src/main/resources/templates/error/403.html
@@ -15,7 +15,7 @@
 <div class="content">
     <div class="content-box text-center">
         <div class="big-content" style="width:auto; min-height:10px;">
-            <img src="/css/images/400.png" alt="400" style="max-width:100%; height:auto;">
+            <img src="/css/images/403-error.svg" alt="403" style="max-width:100%; height:auto;">
         </div>
 
         <h1>권한 또는 세션이 존재하지 않습니다.</h1>
